--- a/src/Presentation/Nop.Web/Views/_ViewImports.cshtml
+++ b/src/Presentation/Nop.Web/Views/_ViewImports.cshtml
@@ -6,7 +6,7 @@
 @*we remove the default InputTagHelper to prevent the checkbox duplicating: https://stackoverflow.com/questions/42544961/asp-net-core-custom-input-tag-helper-rendering-duplicate-checkboxes*@
 @removeTagHelper Microsoft.AspNetCore.Mvc.TagHelpers.InputTagHelper, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Nop.Web.Framework
-
+@using React.AspNet
 @using System.Globalization;
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Mvc.ViewFeatures
@@ -42,3 +42,5 @@
 @using Nop.Web.Models.Sitemap
 @using Nop.Web.Models.Topics
 @using Nop.Web.Models.Vendors
+<script src="~/Content/Sample.jsx"></script>
+@Html.ReactInitJavaScript();
